wire/Message.h

typedef struct Message
{
    /** The length of the message. */
    int32_t _length;

    /** The number of bytes of padding BEFORE where bytes begins. */
    int32_t _padding;

    /** The content. */
    uint8_t* _msgbytes;

    /** Amount of bytes of storage space available in the message. */
    int32_t _capacity;

    // Amount of associated data
    int32_t _adLen;

    // Pointer to associated data
    uint8_t* _ad;

    /**
     * When sending/receiving a Message on a unix socket, a file descriptor to attach.
     * Caviat: In order to maintain backward compatibility with a Message which is
     * allocated using calloc, file descriptor 0 is referred to by -1
     */
    int _associatedFd;

    #ifdef PARANOIA
        /** This is used inside of Iface.h to support Iface_next() */
        struct Iface* currentIface;
    #endif

    /** The allocator which allocated space for this message. */
    struct Allocator* _alloc;
} Message_t;
// static inline Er_DEFUN(void Message_ecopy(struct Message* to, struct Message* from, uint32_t amt))
// {
    
// }

struct Message* Message_new(uint32_t messageLength,
                                          uint32_t amountOfPadding,
                                          struct Allocator* alloc);
void Message_setAssociatedFd(struct Message* msg, int fd);
int Message_getAssociatedFd(struct Message* msg);
struct Message* Message_clone(struct Message* toClone, struct Allocator* alloc);