rust/cjdns_sys/bindings.rs

#[test]
fn bindgen_test_layout_Message() {
    assert_eq!(
        ::std::mem::size_of::<Message>(),
        40usize,
        concat!("Size of: ", stringify!(Message))
    );
    assert_eq!(
        ::std::mem::align_of::<Message>(),
        8usize,
        concat!("Alignment of ", stringify!(Message))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).length as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).padding as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(padding)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).bytes as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(bytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).capacity as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(capacity)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).associatedFd as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(associatedFd)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).currentIface as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(currentIface)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Message>())).alloc as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(alloc)
        )
    );
}
extern "C" {
    pub fn Message_new(
        messageLength: u32,
        amountOfPadding: u32,
        alloc: *mut Allocator,
    ) -> *mut Message;
}
extern "C" {
    pub fn Message_setAssociatedFd(msg: *mut Message, fd: ::std::os::raw::c_int);
}
extern "C" {
    pub fn Message_getAssociatedFd(msg: *mut Message) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn Message_clone(toClone: *mut Message, alloc: *mut Allocator) -> *mut Message;
}
extern "C" {
    pub fn Message_copyOver(output: *mut Message, input: *mut Message, allocator: *mut Allocator);
}
pub type Iface_Callback = ::std::option::Option<
    unsafe extern "C" fn(message: *mut Message, thisInterface: *mut Iface) -> Error_s,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Iface {
    pub send: Iface_Callback,
    pub currentMsg: *mut Message,
    pub connectedIf: *mut Iface,
}
#[test]
fn bindgen_test_layout_Iface() {
    assert_eq!(
        ::std::mem::size_of::<Iface>(),
        24usize,
        concat!("Size of: ", stringify!(Iface))
    );
    assert_eq!(
        ::std::mem::align_of::<Iface>(),
        8usize,
        concat!("Alignment of ", stringify!(Iface))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Iface>())).send as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Iface),
            "::",
            stringify!(send)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Iface>())).currentMsg as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Iface),
            "::",
            stringify!(currentMsg)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Iface>())).connectedIf as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Iface),
            "::",
            stringify!(connectedIf)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CCountWrapper {
    pub internal: *mut Iface,
    pub external: *mut Iface,
}
#[test]
fn bindgen_test_layout_CCountWrapper() {
    assert_eq!(
        ::std::mem::size_of::<CCountWrapper>(),
        16usize,
        concat!("Size of: ", stringify!(CCountWrapper))
    );
    assert_eq!(
        ::std::mem::align_of::<CCountWrapper>(),
        8usize,
        concat!("Alignment of ", stringify!(CCountWrapper))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CCountWrapper>())).internal as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CCountWrapper),
            "::",
            stringify!(internal)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CCountWrapper>())).external as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CCountWrapper),
            "::",
            stringify!(external)
        )
    );
}
extern "C" {
    pub fn countwrapper_create(alloc: *mut Allocator) -> CCountWrapper;
}
